--- a/react-by-programming-hero/t-shirt-react-router-2/package.json
+++ b/react-by-programming-hero/t-shirt-react-router-2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-ecomerce",
+  "name": "t-shirt",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
